<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TeslaTracker</string>
    <string name="example_message">TeslaTracker Vista Principal</string>

    <!-- Etiquetas traducibles -->
    <string name="pref_language">Idioma</string>
    <string name="pref_language_summary">Selecciona el idioma</string>
    <string name="pref_language_dialog">Elige un idioma</string>

    <!-- Opciones del idioma -->
    <string name="language_spanish">Español</string>
    <string name="language_english">Inglés</string>

    <!-- Valores para ListPreference -->
    <string name="language_value_es" translatable="false">es</string>
    <string name="language_value_en" translatable="false">en</string>

    <!-- Menú -->
    <string name="list">LISTA</string>
    <string name="achievements">LOGROS</string>
    <string name="settings">AJUSTES</string>

    <!-- Form -->
    <string name="add_button">Añadir Tesla</string>
    <string name="save_without_complete_plate_and_color">Introduce matrícula y color</string>
    <string name="save_without_complete_plate">Introduce una matrícula</string>
    <string name="save_without_complete_color">Introduce un color</string>
    <string name="ok" translatable="false">OK</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="plate_hint">Matrícula</string>
    <string name="color_hint">Color</string>
    <string name="country_hint">País</string>
    <string name="is_foreign">¿Es extrangero?</string>
    <string name="player_hint">¿Quién lo ha visto?</string>
    <string name="plate_too_long">La matrícula es demasiado larga</string>
    <!-- List -->
    <string name="number_times_seen_hint">Número de veces visto</string>
    <string name="number_times_seen_short_hint">Veces visto</string>
    <string name="search">Buscar</string>
    <string name="filter">Filtrar</string>


    <!-- Modo Oscuro -->
    <string name="dark_mode">Modo Oscuro</string>
    <string name="dark_mode_summary">Activa o desactiva el modo oscuro</string>

    <!-- Detail -->
    <string name="details">Detalles</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="delete_confirmation_title">Confirmar eliminación</string>
    <string name="delete_confirmation_message">¿Seguro que desea eliminar este Tesla?</string>
    <string name="seen_by">Observado por</string>
    <string name="select_a_player">Selecciona un jugador</string>
    <string name="first_time_seen_hint">Primera vez visto</string>
    <string name="last_time_seen_hint">Última vez visto</string>
    <string name="save_without_complete_number">Número de veces visto no puede estar vacío</string>

    <!-- Filter -->
    <string name="color_example">Eg: negro, granate…</string>
    <string name="country_example">Eg: Francia, Alemania…</string>
    <string name="only_foreign">Solo coches extrangeros</string>
    <string name="min_times_seen">Mínimo de veces visto</string>
    <string name="zero" translatable="false">0</string>
    <string name="apply_filters">Aplicar filtros</string>

    <!-- Jugadores -->
    <string name="erika" translatable="false">Erika</string>
    <string name="diego" translatable="false">Diego</string>
    <string name="marina" translatable="false">Marina</string>
    <string name="manu" translatable="false">Manu</string>
    <string name="susi" translatable="false">Susi</string>




</resources>