<?xml version="1.0" encoding="utf-8"?><LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/text_header_plate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/plate_hint"
        style="@style/HeaderTextStyle"/>

    <TextView
        android:id="@+id/text_header_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/color_hint"
        style="@style/HeaderTextStyle"/>

    <TextView
        android:id="@+id/text_header_times"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/number_times_seen_short_hint"
        style="@style/HeaderTextStyle"/>
</LinearLayout>
