<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".form.FormFragment"
    android:orientation="vertical"
    android:id="@+id/formFragment"
    android:padding="16dp">

    <!-- PLATE + COLOR -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false"
        android:layout_marginBottom="12dp">

        <!-- PLATE -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/label_plate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plate_hint"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/edit_text_plate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plate_hint"
                android:inputType="text"
                android:imeOptions="actionNext"/>
        </LinearLayout>

        <!-- COLOR -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="8dp">

            <TextView
                android:id="@+id/label_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_hint"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp" />

            <EditText
                android:id="@+id/edit_text_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/color_hint"
                android:inputType="text"
                android:imeOptions="actionNext"/>
        </LinearLayout>
    </LinearLayout>

    <!-- FOREIGN + COUNTRY -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="16dp"
        android:baselineAligned="false">

        <!-- CHECKBOX FOREIGN -->
        <CheckBox
            android:id="@+id/checkbox_foreign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/is_foreign"
            android:layout_marginEnd="8dp" />

        <!-- COUNTRY -->
        <LinearLayout
            android:id="@+id/layout_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="8dp">

            <TextView
                android:id="@+id/label_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_hint"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp" />

            <EditText
                android:id="@+id/edit_text_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country_hint"
                android:inputType="text"
                android:imeOptions="actionDone"/>
        </LinearLayout>
    </LinearLayout>

    <!-- TÍTULO "OBSERVADO POR" -->
    <TextView
        android:id="@+id/label_observado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seen_by"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp" />

    <!-- SPINNER -->
    <LinearLayout
        android:id="@+id/playerSelectionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/playerSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownVerticalOffset="8dp"
            android:padding="8dp"/>
    </LinearLayout>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:singleLine="false"/>

</LinearLayout>